# django-routine

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: tox.yml
django_routine/: create_files.py  main.py  start.py  strings.py  update_files.py
django_rutine/: start.py
django_rutine/django_rutine/: start.py
