[egg_info]
tag_build =
tag_date = 0
[metadata]
name = django-routine
version = 0.3.4
description = A Django app for managing routines.
long_description = file: README.md
long_description_content_type = text/markdown
author = Daniel Cuznetov
author_email = danielcuznetov04@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
url = https://github.com/DCDie/django-routine
project_urls =
    Bug Tracker = https://github.com/DCDie/django-routine/issues
[options]
python_requires = >=3.8
packages = find:
